# youtube_comment_saver

./: .gitignore  docker-compose.yaml
api/: Dockerfile  pyproject.toml
api/src/: live_chat.py  main.py  models.py
db/: postgresql.conf
db/init/: init.sql
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx  theme.ts  themeRegistry.tsx
web/app/about/: page.tsx
web/app/api/channels/: route.ts
web/app/api/channels/[id]/: route.ts
web/app/api/channels/[id]/videos/: route.ts
web/app/api/videos/: route.ts
web/app/api/videos/[id]/: route.ts
web/app/channels/: page.tsx
web/app/channels/[id]/: page.tsx
web/app/status/: page.tsx
web/app/videos/: page.tsx
web/app/videos/[id]/: page.tsx
web/components/: channel.tsx  video.tsx  videoList.tsx
web/patches/: react-youtube+10.1.0.patch
web/utils/: types.ts
